--- a/Array/48. Rotate Image.ipynb
+++ b/Array/48. Rotate Image.ipynb
@@ -7,26 +7,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Problem Link: https://leetcode.com/problems/rotate-image/\n",
-    "\n",
     "class Solution:\n",
-    "    def rotate(self, A):\n",
-    "        n = len(A)\n",
-    "        for i in range(n):\n",
-    "            for j in range(i):\n",
-    "                A[i][j], A[j][i] = A[j][i], A[i][j]\n",
-    "        for row in A:\n",
-    "            for j in range(n/2):\n",
-    "                row[j], row[~j] = row[~j], row[j]\n",
-    "            \n",
-    "            \n",
-    "            \n",
+    "    def rotate(self, matrix: List[List[int]]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify matrix in-place instead.\n",
+    "        \"\"\"\n",
+    "        n = len(matrix)\n",
     "        \n",
-    "            \n",
-    "            \n",
-    "            \n",
+    "        for i in range(n//2):\n",
+    "            matrix[i], matrix[n-i-1] = matrix[n-i-1], matrix[i]\n",
     "        \n",
-    "        "
+    "        for row in range(n):\n",
+    "            for col in range(row, n):\n",
+    "                matrix[row][col], matrix[col][row] = matrix[col][row], matrix[row][col]\n",
+    "        \n",
+    "        return matrix\n",
+    "\n",
+    "        \n"
    ]
   }
  ],
